--- a/public/index.html
+++ b/public/index.html
@@ -14,107 +14,17 @@
         html, body {
             height: 100vh;
             width: 100vw;
-            overflow: auto;
-            background: #f5f5f5;
+            overflow: hidden;
         }
 
-        .pdf-container {
+        iframe {
             width: 100%;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px 10px;
-            gap: 10px;
-        }
-
-        .page {
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            background: white;
-            margin-bottom: 10px;
-        }
-
-        canvas {
-            display: block;
-            max-width: 100%;
-            height: auto;
-        }
-
-        .loading {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-size: 16px;
-            color: #666;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
-
-        @media (max-width: 768px) {
-            .pdf-container {
-                padding: 10px 5px;
-            }
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
 <body>
-    <div class="loading" id="loading">Loading...</div>
-    <div class="pdf-container" id="pdf-container" style="display: none;"></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-    <script>
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
-
-        const container = document.getElementById('pdf-container');
-        const loading = document.getElementById('loading');
-        
-        // Determine optimal scale for mobile
-        const isMobile = window.innerWidth <= 768;
-        const baseScale = isMobile ? 1.5 : 2.0;
-
-        pdfjsLib.getDocument('aashish_kumar.pdf').promise.then(function(pdf) {
-            loading.style.display = 'none';
-            container.style.display = 'flex';
-
-            // Render all pages
-            for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
-                pdf.getPage(pageNum).then(function(page) {
-                    // Calculate scale to fit width with some margin
-                    const viewport = page.getViewport({ scale: 1 });
-                    const containerWidth = Math.min(container.clientWidth - 20, 800); // Max width 800px
-                    const scale = (containerWidth / viewport.width) * baseScale;
-                    const scaledViewport = page.getViewport({ scale: scale });
-
-                    // Create canvas for this page
-                    const canvas = document.createElement('canvas');
-                    const ctx = canvas.getContext('2d');
-                    canvas.height = scaledViewport.height;
-                    canvas.width = scaledViewport.width;
-                    canvas.className = 'page';
-
-                    // Render page
-                    const renderContext = {
-                        canvasContext: ctx,
-                        viewport: scaledViewport
-                    };
-                    
-                    page.render(renderContext);
-                    container.appendChild(canvas);
-                });
-            }
-        }).catch(function(error) {
-            console.error('Error loading PDF:', error);
-            loading.textContent = 'Error loading PDF';
-        });
-
-        // Handle window resize
-        let resizeTimeout;
-        window.addEventListener('resize', function() {
-            clearTimeout(resizeTimeout);
-            resizeTimeout = setTimeout(function() {
-                location.reload(); // Simple reload on resize for optimal display
-            }, 300);
-        });
-    </script>
+    <iframe src="aashish_kumar.pdf" title="Aashish Kumar Resume"></iframe>
 </body>
 </html>
